public/Styles/main.css
body * {
	box-sizing: border-box;
}

body {
	font-family: 'Raleway', sans-serif;
	padding-top: 45px;
}

nav {
	position: fixed;
	top: 0;
	display: flex;
	justify-content: space-evenly;
	align-items: center;
	width: 100%;
	height: 45px;
	background-color: #F6F6F6;
	z-index: 10;
	border-bottom: 1px solid #17443b20;
	box-shadow: 0 5px 15px #5656561a;
}

.auth, .noAuth {
	display: none;
}

nav a {
	width: 100%;
	height: 100%;
	padding: 4px;
	border-right: 1px solid #17443b20;
	text-align: center;
	font-size: 14px;
	color: #349680;
	text-decoration: none;
	transition: all .3s;
}

nav a:hover {
	background-color: #FFFFFF;
	color: #41a3e1;
}

.navIcon {
	display: block;
	font-size: 20px;
}

.nav-currentPage {
	background-color: #FFFFFF;
	color: #41a3e1;
}

.auth {
	display: none;
}

main {

}

header {
	width: 100%;
	height: 65vh;
	margin-top: 0;
	padding: 0 20px 20px 20px;
	color: white;
}

header h1 {
	font-size: 8vh;
	font-family: 'Arima Madurai', cursive;
	margin: 0;
	padding-top: 60px;
}

.close {
	font-size: 40px;
	color: #FFFFFF88;
	transition: all .3s;
}

.close:hover {
	color: #FFFFFF;
    cursor: pointer;
}

.editIcons {
	display: none;
	width: 100%;
	height: 30px;
	padding: 5px;
	color: #778899;
	transition: all .3s;
}

.editIcons i:hover {
	cursor: pointer;
}

.editIcons .trash {
	position: absolute;
	right: 5%;
	transition: all .2s;
}

.editIcons .trash:hover {
	color: #BD7070;
	font-size: 18px;
}

.editIcons .editList {
	position: absolute;
	right: calc(5% + 35px);
	transition: all .2s;
}

.editIcons .editList:hover {
	color: #5A9477;
	font-size: 18px;
}

button {
	margin: 10px;
	transition: all .3s;
}

button:hover {
	box-shadow: 2px 2px 10px #0404042e;
	cursor: pointer;
}

.completeButton {
	background-color: green;
	color: white;
	padding: 10px;
	border: none;
	border-radius: 5px;
}

.cancelButton {
	background-color: red;
	color: white;
	padding: 10px;
	border: none;
	border-radius: 5px;
}

fieldset {
	border: none;
}

/*===================================================*/
/* HOME PAGE */
/*===================================================*/

.index-header {
	background-color: #344d96;
/*	background-image: 
	    -webkit-linear-gradient(rgba(255, 255, 255, 0.25), rgba(200, 200, 200, 0.25)), 
	    url('../Assets/paros.jpg');
	background-image: 
	    -o-linear-gradient(rgba(255, 255, 255, 0.25), rgba(200, 200, 200, 0.25)), 
	    url('../Assets/paros.jpg');
	background-image: 
	    linear-gradient(rgba(255, 255, 255, 0.25), rgba(200, 200, 200, 0.25)), 
	    url('../Assets/paros.jpg');*/
	background-size: cover;
	background-repeat: no-repeat;
	background-position: left bottom;
	text-align: center;
	text-shadow: 0 0 20px #00000020;
}

.subtitle {
	width: 90%;
	margin: 30px auto;
	font-size: 18px;
	font-weight: 200;
}

.openCreateAccount, .createNewAccountButton, .loginButton {
	background-color: #349680;
	color: white;
	border: none;
	border-radius: 5px;
	padding: 15px;
	font-size: 18px;
}

.createAccountForm, .loginForm {
	margin-top: 20px;
}

.createAccountForm input, .loginForm input {
	border-radius: 3px;
}

.learn {
	width: 50%;
	margin: 55px auto 0 auto;
	text-align: center;
}

.learnIcon {
	font-size: 40px;
	color: skyblue;
}

.index-createAccount, .index-login {
	display: none;
	position: relative;
	margin: 0 auto;
	max-width: 400px;
	height: 62vh;
	border: 1px solid transparent;
	background-color: royalblue;
	box-shadow: 0px 5px 15px #4040404C;
	border-radius: 3px;
	color: white;
}

.index-createAccount {

}

.index-login {

}

.index-header .close {
	position: absolute;
	right: -50px;
}

.validation-warning {
	width: 100%;
	height: 40px;
	margin-top: -8px;
}

.warning {
	display: none;
	margin: 0px;
	padding: 8px 0px;
	font-size: 13px;
	text-align: center;
	color: #BD7070;
	background-color: #f5f5f5;
	border: 1px solid #BD7070;
	border-radius: 3px;
	box-shadow: 0 0 10px red;
}

.welcome {
	display: none;
	width: 90%;
	font-size: 13px;
	margin: 0 auto 0 auto;
}

/*===================================================*/
/* LISTS PAGE */
/*===================================================*/

.lists-header {
	background-color: seagreen;
	color: white;
	text-align: center;
}

.lists-instructions {
	width: fit-content;
	margin: 65px auto;
	text-align: left;
	font-weight: 200;
	font-size: 20px;
}

.lists-instructions li {
	margin: 20px 0;
}

.list-views {
	width: 100%;
	min-height: 400px;
	position: relative;
}

.list-tools {
	position: relative;
	width: 100%;
	height: 155px;
	margin-bottom: 30px;
	padding: 10px;
	border-bottom: 1px solid #00000025;
	box-shadow: 0 5px 5px #5656561a;
}

.list-searchForm {
	width: 70%;
	display: inline-block;
	margin-left: 40px;
}

.list-searchForm>label {
	display: block;
	font-size: 25px;
	font-weight: 200;
	margin: 15px 0 -10px 0;
}

.list-searchForm>input {
	display: inline-block;
	width: 400px;
	height: 50px;
	padding: 5px;
	border: none;
	border-bottom: 1px solid #4169E15F;
	box-shadow: 0px 0px 2px #4169E130;
}

.list-searchForm>button {
	height: 40px;
	width: 40px;
	margin: 0;
	background: none;
	border: none;
	border-radius: 20px;
	font-size: 25px;
	color: #4169E1; /*royalblue*/
}

.list-searchForm>button:hover {
	box-shadow: 0px 0px 10px #0404042e;
}

.clearResults {
	display: none;
	position: absolute;
	bottom: -5px;
	left: 40px;
	width: 120px;
	background-color: #4169E1;
	color: white;
	padding: 5px;
	border-radius: 15px;
	border: none;
}



.listPreview {
	position: relative;
	display: inline-block;
	vertical-align: middle;
	width: 300px;
	height: 300px;
	margin: 15px;
	padding: 5px;
	border-radius: 5px;
	box-shadow: 0px 3px 10px lightgrey;
	background-color: seagreen;
	color: white;
	cursor: pointer;
}

.listPreview:hover {
	background-color: mediumseagreen;
	box-shadow: 0px 3px 10px lightgray;
}

.listPreviewLocation {
	font-size: 14px;
	font-weight: 200;
	text-align: center;
}

.listPreviewTitle {
	font-size: 18px;
	font-weight: 400;
}

.listPreviewDescription {
	font-size: 16px;
	font-weight: 300;
}
/* ... */

